--- a/feladat.html
+++ b/feladat.html
@@ -889,3 +889,4 @@ USA_WinterCardinalFeather kihagyva (100%), <br />
 USA_Chickadee kihagyva (100%), <br />
 USA_FlatDogBone kihagyva (100%), <br />
 USA_NyisutterBday, <b>updated</b>, 66, <a href="https://www.munzee.com/map/9yzsemrcz/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NyisutterBday.json" target="_blank">json</a> <b>100%</b><br />
+USA_Cornucopia, <b>updated</b>, 62, <a href="https://www.munzee.com/map/9yzg9um8k/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Cornucopia.json" target="_blank">json</a> <b>100%</b><br />
