--- a/feladat.html
+++ b/feladat.html
@@ -894,3 +894,4 @@ USA_StLouisRobin, <b>updated</b>, 112, <a href="https://www.munzee.com/map/9yzdz
 USA_FriendshipFliHiBrewery, <b>updated</b>, 59, <a href="https://www.munzee.com/map/9yzmh23dv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FriendshipFliHiBrewery.json" target="_blank">json</a> <b>100%</b><br />
 USA_SummerTree, <b>updated</b>, 214, <a href="https://www.munzee.com/map/9yzsdc5rv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SummerTree.json" target="_blank">json</a> <b>100%</b><br />
 USA_ZeeSpyHat, <b>updated</b>, 66, <a href="https://www.munzee.com/map/9yzs8r9db/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZeeSpyHat.json" target="_blank">json</a> <b>100%</b><br />
+USA_WYMM, <b>updated</b>, 76, <a href="https://www.munzee.com/map/9yzgdhpf0/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WYMM.json" target="_blank">json</a> <b>100%</b><br />
