--- a/feladat.html
+++ b/feladat.html
@@ -895,3 +895,4 @@ USA_FriendshipFliHiBrewery, <b>updated</b>, 59, <a href="https://www.munzee.com/
 USA_SummerTree, <b>updated</b>, 214, <a href="https://www.munzee.com/map/9yzsdc5rv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SummerTree.json" target="_blank">json</a> <b>100%</b><br />
 USA_ZeeSpyHat, <b>updated</b>, 66, <a href="https://www.munzee.com/map/9yzs8r9db/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZeeSpyHat.json" target="_blank">json</a> <b>100%</b><br />
 USA_WYMM, <b>updated</b>, 76, <a href="https://www.munzee.com/map/9yzgdhpf0/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WYMM.json" target="_blank">json</a> <b>100%</b><br />
+USA_FlatObjectAnnex, <b>updated</b>, 58, <a href="https://www.munzee.com/map/9yzse5epk/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatObjectAnnex.json" target="_blank">json</a><br />
