--- a/feladat.html
+++ b/feladat.html
@@ -896,3 +896,4 @@ USA_SummerTree, <b>updated</b>, 214, <a href="https://www.munzee.com/map/9yzsdc5
 USA_ZeeSpyHat, <b>updated</b>, 66, <a href="https://www.munzee.com/map/9yzs8r9db/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZeeSpyHat.json" target="_blank">json</a> <b>100%</b><br />
 USA_WYMM, <b>updated</b>, 76, <a href="https://www.munzee.com/map/9yzgdhpf0/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WYMM.json" target="_blank">json</a> <b>100%</b><br />
 USA_FlatObjectAnnex, <b>updated</b>, 58, <a href="https://www.munzee.com/map/9yzse5epk/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatObjectAnnex.json" target="_blank">json</a><br />
+USA_StLFlatRob, <b>updated</b>, 178, <a href="https://www.munzee.com/map/9yzsdvgr3/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLFlatRob.json" target="_blank">json</a><br />
