--- a/feladat.html
+++ b/feladat.html
@@ -899,3 +899,4 @@ USA_FlatObjectAnnex, <b>updated</b>, 58, <a href="https://www.munzee.com/map/9yz
 USA_StLFlatRob, <b>updated</b>, 178, <a href="https://www.munzee.com/map/9yzsdvgr3/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLFlatRob.json" target="_blank">json</a><br />
 USA_StLFlatRobFlats, <b>updated</b>, 198, <a href="https://www.munzee.com/map/9yzsdvgr3/16.0009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLFlatRobFlats.json" target="_blank">json</a> <b>100%</b><br />
 USA_CottlevillePost, <b>updated</b>, 30, <a href="https://www.munzee.com/map/9yzs3jkzp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CottlevillePost.json" target="_blank">json</a> <b>100%</b><br />
+USA_DaisyChain, <b>updated</b>, 61, <a href="https://www.munzee.com/map/9yzsdqwqc/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DaisyChain.json" target="_blank">json</a> <b>100%</b><br />
