--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.21 08:57:48<br />
+<b>start</b> - 2023.02.21 11:08:24<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.4299999999999997<br />
-Hungary_VotiveChurch, not updated, -35.81000000000001<br />
+Hungary_VotiveChurch, not updated, -35.25<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -692,215 +692,4 @@ Australia_FlatsFlyAKite kihagyva (100%), <br />
 Australia_SouthernCrossKite kihagyva (100%), <br />
 Australia_ToowoombaRose, not updated, 0.0<br />
 Australia_SnowBeeMelting kihagyva (100%), <br />
-USA_CelticSnake, not updated, 0.6329113924050631<br />
-Australia_AE2Submarine kihagyva (100%), <br />
-Australia_AussiePossum kihagyva (100%), <br />
-USA_ArizonaCactus kihagyva (100%), <br />
-UnitedKingdom_BournemouthBeachHuts kihagyva (100%), <br />
-Australia_CarsBoysFirstCar kihagyva (100%), <br />
-Australia_CasinoLuckyStar kihagyva (100%), <br />
-UnitedKingdom_CazmosCelebrationGarden kihagyva (100%), <br />
-Australia_CrocOfMunzees kihagyva (100%), <br />
-UnitedKingdom_CuppaCazmo kihagyva (100%), <br />
-Australia_DroughtAngel kihagyva (100%), <br />
-Australia_EmuInCanberra kihagyva (100%), <br />
-UnitedKingdom_FlatFlying kihagyva (100%), <br />
-UnitedKingdom_FlatSledding kihagyva (100%), <br />
-Australia_GoldCoastGhost kihagyva (100%), <br />
-UnitedKingdom_Greenman kihagyva (100%), <br />
-Australia_HauntedHouse kihagyva (100%), <br />
-USA_HorsingAroundAggieland kihagyva (100%), <br />
-USA_Julbock kihagyva (100%), <br />
-USA_ReindeerInKentucky kihagyva (100%), <br />
-Australia_LismorePie kihagyva (100%), <br />
-USA_LostGoldenJellyfish kihagyva (100%), <br />
-UnitedKingdom_LostJellyfishInBournemouth kihagyva (100%), <br />
-USA_LostPBJellyfishInRogers kihagyva (100%), <br />
-UnitedKingdom_LostTurtleInFerndown kihagyva (100%), <br />
-Australia_MawsonLakesDHSTape kihagyva (100%), <br />
-UnitedKingdom_MoreBeachHuts kihagyva (100%), <br />
-UnitedKingdom_Pompey kihagyva (100%), <br />
-UnitedKingdom_QueensBaton kihagyva (100%), <br />
-USA_RockingHorseInOhio kihagyva (100%), <br />
-Australia_RooInCanberra kihagyva (100%), <br />
-Australia_SAPartyHat kihagyva (100%), <br />
-Australia_Time2MunzeeLilydale kihagyva (100%), <br />
-Australia_TrojanKitty kihagyva (100%), <br />
-Australia_Tulips kihagyva (100%), <br />
-UnitedKingdom_WinterSolstice kihagyva (100%), <br />
-Australia_MalenyTrees, not updated, 0.0<br />
-USA_MunzeeX kihagyva (100%), <br />
-USA_MunzeesXBirthday kihagyva (100%), <br />
-USA_BobbyTheZombie kihagyva (100%), <br />
-USA_EasterMunzeePin, not updated, 0.0<br />
-Germany_10thBirthdayBerlin, not updated, 0.0<br />
-UnitedKingdom_MiniPortal3 kihagyva (100%), <br />
-USA_MiniPortal4 kihagyva (100%), <br />
-USA_NoblesvilleTaco, not updated, 0.0<br />
-Canada_FabulousFebruaryFeteHeart, not updated, 0.0<br />
-Canada_FabulousFebruaryFeteFlat, not updated, 0.0<br />
-Canada_MadMarchPi kihagyva (100%), <br />
-USA_2ndAnnualCuriosiTeaParty2 kihagyva (100%), <br />
-USA_JunkArt, not updated, 0.0<br />
-USA_FolkstonTomahawk kihagyva (100%), <br />
-Portugal_ShipCanical kihagyva (100%), <br />
-Australia_TourDownUnder, not updated, 0.0<br />
-UnitedKingdom_BathBoat, not updated, 0.0<br />
-USA_GCardinalFlat kihagyva (100%), <br />
-Canada_WarblersSquare kihagyva (100%), <br />
-Portugal_Saab9xInMadeira, not updated, 0.0<br />
-Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
-USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
-USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
-UnitedKingdom_ISpyASpyInStockport, not updated, 0.0<br />
-USA_SpyTrain kihagyva (100%), <br />
-USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
-USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
-Canada_Feb2023HeartGarden, not updated, 0.0<br />
-USA_SpyGlass, <b>updated</b>, 143, <a href="https://www.munzee.com/map/dnrmhsuv8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpyGlass.json" target="_blank">json</a> <b>100%</b><br />
-USA_TiedUpInKnotzInRoundRock, not updated, 0.9000000000000057<br />
-USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
-USA_EllisCreekOwl kihagyva (100%), <br />
-USA_EllisCreekOwlFlats, not updated, 0.0<br />
-USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
-USA_GardenGirl kihagyva (100%), <br />
-USA_TexasGoldenTicket kihagyva (100%), <br />
-USA_TexasGoldenTicketFlats, not updated, 0.0<br />
-USA_MarshallMallard kihagyva (100%), <br />
-USA_UncutDiamond kihagyva (100%), <br />
-USA_UncutDiamondFlats kihagyva (100%), <br />
-USA_BabyGroot kihagyva (100%), <br />
-USA_WeatherfordXmasOwl kihagyva (100%), <br />
-USA_AvocatoAvocato kihagyva (100%), <br />
-USA_AvocatoToy, not updated, 0.0<br />
-USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
-USA_BundtiniTrail kihagyva (100%), <br />
-USA_JewelOfAHeart kihagyva (100%), <br />
-USA_LetsTalkAbundtLove kihagyva (100%), <br />
-USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
-USA_Cowtown kihagyva (100%), <br />
-USA_VelmaCrossbow, not updated, 0.0<br />
-USA_Shaggy, not updated, 0.0<br />
-USA_MysteryMachine, not updated, 0.0<br />
-USA_FortWorthFighterJet, not updated, 0.0<br />
-USA_TCUHornedFrogs, not updated, 0.0<br />
-USA_GeowoodstockXVIITexas, not updated, 0.0<br />
-USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
-USA_TigerKing, not updated, 0.2400000000000091<br />
-USA_TexasGeowoodstock2019 kihagyva (100%), <br />
-USA_FortWorthSucculents kihagyva (100%), <br />
-USA_RobVsMatt, not updated, 0.0<br />
-USA_BrightColoredHorse, not updated, 0.0<br />
-USA_BrightColoredHorseFlats, not updated, 0.0<br />
-USA_RuhRohRAGGY, not updated, 0.0<br />
-USA_PrizeWheel kihagyva (100%), <br />
-USA_EvoHedgehog kihagyva (100%), <br />
-USA_SeahorseByTheSeaShore kihagyva (100%), <br />
-USA_LakeForestMixture, not updated, 0.35999999999999943<br />
-USA_GreenvillesAmethystRoad kihagyva (100%), <br />
-USA_SaintMarysHeart kihagyva (100%), <br />
-USA_GreenvilleOhioSpiritTrophy, not updated, 0.0<br />
-USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
-USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
-USA_GreenvilleZodiacWheels kihagyva (100%), <br />
-USA_GreenvilleRUMCircle, not updated, 0.0<br />
-USA_GreenvilleFlatSurprise, not updated, 0.0<br />
-USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
-USA_GreenvilleSouthCarolina, not updated, 0.0<br />
-USA_JaysvilleFlatCircles, not updated, 0.0<br />
-USA_CCTXZeeCret, not updated, 0.0<br />
-USA_DecaturHearts kihagyva (100%), <br />
-USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
-UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
-UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
-USA_ScoobyDooCrossbow, not updated, 0.0<br />
-USA_TexasStateFlag kihagyva (100%), <br />
-USA_Geowoodstock2019 kihagyva (100%), <br />
-USA_MansfieldMuru, not updated, 0.0<br />
-USA_CedarRapidsIAFlag, not updated, 0.0<br />
-Hungary_JewelAndColor kihagyva (100%), <br />
-USA_CRMunzee6thBirthday kihagyva (100%), <br />
-USA_CRAirMysteryTrail kihagyva (100%), <br />
-USA_CRMunzFit20 kihagyva (100%), <br />
-USA_HayesBattlefield kihagyva (100%), <br />
-USA_CREgyptianZodiac kihagyva (100%), <br />
-USA_CherryBombCedarRapids kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
-USA_GCandyCane kihagyva (100%), <br />
-USA_GCandyCaneFlats, not updated, 0.0<br />
-USA_GShamrock kihagyva (100%), <br />
-USA_GShamrockFlats, not updated, 0.3500000000000014<br />
-USA_GPumpkin kihagyva (100%), <br />
-USA_GPumpkinFlats, not updated, 0.0<br />
-USA_Mauhaus, not updated, 0.0<br />
-USA_GToyotaCrossbows, not updated, 0.0<br />
-USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
-USA_GToyota kihagyva (100%), <br />
-USA_GToyotaFlats, not updated, 0.0<br />
-USA_GJewelBelt, not updated, 0.0<br />
-USA_GEvoBelt, not updated, 0.0<br />
-USA_GBypassMixed, not updated, 0.0<br />
-USA_G62WestEvo, not updated, 0.33000000000000007<br />
-USA_NoelridgeMysteryFlats kihagyva (100%), <br />
-USA_GSouthland, not updated, 0.1999999999999993<br />
-USA_GMorning, not updated, 0.0<br />
-USA_GCHampionWay, not updated, 0.0<br />
-USA_GGamingTable, not updated, 0.10999999999999943<br />
-USA_PotOfGold, not updated, 0.0<br />
-USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, not updated, 0.0<br />
-USA_OwensboroRiverboatFlats, not updated, 0.0<br />
-Lithuania_SeskinesSkulpturyParkas, not updated, 0.3300000000000054<br />
-Netherlands_RobAndLouise kihagyva (100%), <br />
-USA_TaylorSwiftTheEras, not updated, 0.0<br />
-USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees, not updated, 0.6099999999999994<br />
-USA_MaineWeatherBalloon, not updated, 0.0<br />
-USA_HappyHoliday20, not updated, 0.0<br />
-USA_HazardSpurCampton, not updated, 0.0<br />
-USA_HazardSpurCamptonFlats, not updated, 0.0<br />
-USA_CrossedArrowsOwensboro, not updated, 0.0<br />
-USA_GHarmony kihagyva (100%), <br />
-USA_GHarmonyFlats, not updated, 0.0<br />
-USA_MontgomeryChiliPepper, not updated, 0.0<br />
-USA_ConcordHearts kihagyva (100%), <br />
-USA_WalkieTalkieWatch kihagyva (100%), <br />
-USA_StPetersNVG kihagyva (100%), <br />
-USA_FoxHillFit, not updated, 0.0<br />
-USA_CelticKnot, not updated, 0.0<br />
-USA_STLPirateShip, not updated, 0.769999999999996<br />
-USA_BluesMunzee, not updated, 0.0<br />
-USA_HowellViking, not updated, 0.0<br />
-USA_STLPokeball, not updated, 0.0<br />
-USA_STLTardis, not updated, 0.0<br />
-USA_KirkwoodEvolutions1, not updated, 0.0<br />
-USA_KirkwoodEvolutions2, not updated, 0.0<br />
-USA_KirkwoodEvolutions3, not updated, 0.0<br />
-USA_KirkwoodEvolutions4, not updated, 0.0<br />
-USA_KirkwoodEvolutions5, not updated, 0.0<br />
-USA_KirkwoodEvolutions6 kihagyva (100%), <br />
-USA_KirkwoodEvolutions7, not updated, 0.0<br />
-USA_Woodpecker, not updated, 0.0<br />
-USA_ZBriefcase kihagyva (100%), <br />
-USA_WinterCardinalFeather kihagyva (100%), <br />
-USA_Chickadee kihagyva (100%), <br />
-USA_FlatDogBone kihagyva (100%), <br />
-USA_NyisutterBday, <b>updated</b>, 66, <a href="https://www.munzee.com/map/9yzsemrcz/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NyisutterBday.json" target="_blank">json</a> <b>100%</b><br />
-USA_Cornucopia, <b>updated</b>, 62, <a href="https://www.munzee.com/map/9yzg9um8k/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Cornucopia.json" target="_blank">json</a> <b>100%</b><br />
-USA_StLouisRobin, <b>updated</b>, 112, <a href="https://www.munzee.com/map/9yzdzrdv0/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLouisRobin.json" target="_blank">json</a> <b>100%</b><br />
-USA_FriendshipFliHiBrewery, <b>updated</b>, 59, <a href="https://www.munzee.com/map/9yzmh23dv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FriendshipFliHiBrewery.json" target="_blank">json</a> <b>100%</b><br />
-USA_SummerTree, <b>updated</b>, 214, <a href="https://www.munzee.com/map/9yzsdc5rv/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SummerTree.json" target="_blank">json</a> <b>100%</b><br />
-USA_ZeeSpyHat, <b>updated</b>, 66, <a href="https://www.munzee.com/map/9yzs8r9db/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZeeSpyHat.json" target="_blank">json</a> <b>100%</b><br />
-USA_WYMM, <b>updated</b>, 76, <a href="https://www.munzee.com/map/9yzgdhpf0/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WYMM.json" target="_blank">json</a> <b>100%</b><br />
-USA_FlatObjectAnnex, <b>updated</b>, 58, <a href="https://www.munzee.com/map/9yzse5epk/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatObjectAnnex.json" target="_blank">json</a><br />
-USA_StLFlatRob, <b>updated</b>, 178, <a href="https://www.munzee.com/map/9yzsdvgr3/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLFlatRob.json" target="_blank">json</a><br />
-USA_StLFlatRobFlats, <b>updated</b>, 198, <a href="https://www.munzee.com/map/9yzsdvgr3/16.0009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLFlatRobFlats.json" target="_blank">json</a> <b>100%</b><br />
-USA_CottlevillePost, <b>updated</b>, 30, <a href="https://www.munzee.com/map/9yzs3jkzp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CottlevillePost.json" target="_blank">json</a> <b>100%</b><br />
-USA_DaisyChain, <b>updated</b>, 61, <a href="https://www.munzee.com/map/9yzsdqwqc/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_DaisyChain.json" target="_blank">json</a> <b>100%</b><br />
-USA_TowerGrovePark, <b>updated</b>, 73, <a href="https://www.munzee.com/map/9yzgd7v6g/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TowerGrovePark.json" target="_blank">json</a> <b>100%</b><br />
-USA_PiratesCannon, <b>updated</b>, 168, <a href="https://www.munzee.com/map/9yzsu8ku4/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiratesCannon.json" target="_blank">json</a> <b>100%</b><br />
-USA_MothersDayBasket, <b>updated</b>, 213, <a href="https://www.munzee.com/map/9yzsdnv17/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MothersDayBasket.json" target="_blank">json</a> <b>100%</b><br />
-USA_Munzee11, <b>updated</b>, 42, <a href="https://www.munzee.com/map/9yzg8bwjs/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Munzee11.json" target="_blank">json</a> <b>100%</b><br />
+USA_CelticSnake, <b>updated</b>, 75, <a href="https://www.munzee.com/map/9vk4uqw9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticSnake.json" target="_blank">json</a><br />
