--- a/feladat.html
+++ b/feladat.html
@@ -802,3 +802,55 @@ USA_LakeForestMixture, not updated, 0.35999999999999943<br />
 USA_GreenvillesAmethystRoad kihagyva (100%), <br />
 USA_SaintMarysHeart kihagyva (100%), <br />
 USA_GreenvilleOhioSpiritTrophy, <b>updated</b>, 145, <a href="https://www.munzee.com/map/dp5u4pntu/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleOhioSpiritTrophy.json" target="_blank">json</a><br />
+USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
+USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
+USA_GreenvilleZodiacWheels kihagyva (100%), <br />
+USA_GreenvilleRUMCircle, not updated, 0.0<br />
+USA_GreenvilleFlatSurprise, not updated, 0.0<br />
+USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
+USA_GreenvilleSouthCarolina, not updated, 0.0<br />
+USA_JaysvilleFlatCircles, not updated, 0.0<br />
+USA_CCTXZeeCret, not updated, 0.0<br />
+USA_DecaturHearts kihagyva (100%), <br />
+USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
+UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
+UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
+USA_ScoobyDooCrossbow, not updated, 0.0<br />
+USA_TexasStateFlag kihagyva (100%), <br />
+USA_Geowoodstock2019 kihagyva (100%), <br />
+USA_MansfieldMuru, not updated, 0.0<br />
+USA_CedarRapidsIAFlag, not updated, 0.0<br />
+Hungary_JewelAndColor kihagyva (100%), <br />
+USA_CRMunzee6thBirthday kihagyva (100%), <br />
+USA_CRAirMysteryTrail kihagyva (100%), <br />
+USA_CRMunzFit20 kihagyva (100%), <br />
+USA_HayesBattlefield kihagyva (100%), <br />
+USA_CREgyptianZodiac kihagyva (100%), <br />
+USA_CherryBombCedarRapids kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
+USA_GCandyCane kihagyva (100%), <br />
+USA_GCandyCaneFlats, not updated, 0.0<br />
+USA_GShamrock kihagyva (100%), <br />
+USA_GShamrockFlats, not updated, 0.3500000000000014<br />
+USA_GPumpkin kihagyva (100%), <br />
+USA_GPumpkinFlats, not updated, 0.0<br />
+USA_Mauhaus kihagyva (100%), <br />
+USA_GToyotaCrossbows, not updated, 0.0<br />
+USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
+USA_GToyota kihagyva (100%), <br />
+USA_GToyotaFlats, not updated, 0.0<br />
+USA_GJewelBelt, not updated, 0.20999999999999375<br />
+USA_GEvoBelt, not updated, 0.0<br />
+USA_GBypassMixed, not updated, 0.0<br />
+USA_G62WestEvo, not updated, 0.33000000000000007<br />
+USA_NoelridgeMysteryFlats kihagyva (100%), <br />
+USA_GSouthland, not updated, 0.1999999999999993<br />
+USA_GMorning, not updated, 0.0<br />
+USA_GCHampionWay, not updated, 0.0<br />
+USA_GGamingTable, not updated, 0.21000000000000085<br />
+USA_PotOfGold, not updated, 0.0<br />
+USA_WitchsHat, not updated, 0.0<br />
+USA_OwensboroRiverboat, not updated, 0.060000000000002274<br />
+USA_OwensboroRiverboatFlats, not updated, 0.0<br />
+Lithuania_SeskinesSkulpturyParkas, <b>updated</b>, 145, <a href="https://www.munzee.com/map/u99zq1jmb/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_SeskinesSkulpturyParkas.json" target="_blank">json</a><br />
