--- a/feladat.html
+++ b/feladat.html
@@ -854,3 +854,66 @@ USA_WitchsHat, not updated, 0.0<br />
 USA_OwensboroRiverboat, not updated, 0.060000000000002274<br />
 USA_OwensboroRiverboatFlats, not updated, 0.0<br />
 Lithuania_SeskinesSkulpturyParkas, <b>updated</b>, 145, <a href="https://www.munzee.com/map/u99zq1jmb/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_SeskinesSkulpturyParkas.json" target="_blank">json</a><br />
+Netherlands_RobAndLouise kihagyva (100%), <br />
+USA_TaylorSwiftTheEras, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+USA_GreenSpyFrog kihagyva (100%), <br />
+USA_PotOZees, not updated, 0.0<br />
+USA_MaineWeatherBalloon, not updated, 0.0<br />
+USA_HappyHoliday20, not updated, 0.0<br />
+USA_HazardSpurCampton, not updated, 0.0<br />
+USA_HazardSpurCamptonFlats, not updated, 0.0<br />
+USA_CrossedArrowsOwensboro, not updated, 0.0<br />
+USA_GHarmony kihagyva (100%), <br />
+USA_GHarmonyFlats, not updated, 0.0<br />
+USA_MontgomeryChiliPepper, not updated, 0.0<br />
+USA_ConcordHearts kihagyva (100%), <br />
+USA_WalkieTalkieWatch kihagyva (100%), <br />
+USA_StPetersNVG kihagyva (100%), <br />
+USA_FoxHillFit, not updated, 0.0<br />
+USA_CelticKnot, not updated, 0.5900000000000034<br />
+USA_STLPirateShip, not updated, 0.0<br />
+USA_BluesMunzee, not updated, 0.0<br />
+USA_HowellViking, not updated, 0.0<br />
+USA_STLPokeball, not updated, 0.0<br />
+USA_STLTardis, not updated, 0.0<br />
+USA_KirkwoodEvolutions1, not updated, 0.0<br />
+USA_KirkwoodEvolutions2, not updated, 0.0<br />
+USA_KirkwoodEvolutions3, not updated, 0.0<br />
+USA_KirkwoodEvolutions4, not updated, 0.0<br />
+USA_KirkwoodEvolutions5, not updated, 0.0<br />
+USA_KirkwoodEvolutions6 kihagyva (100%), <br />
+USA_KirkwoodEvolutions7, not updated, 0.0<br />
+USA_Woodpecker, not updated, 0.0<br />
+USA_ZBriefcase kihagyva (100%), <br />
+USA_WinterCardinalFeather kihagyva (100%), <br />
+USA_Chickadee kihagyva (100%), <br />
+USA_FlatDogBone kihagyva (100%), <br />
+USA_NyisutterBday kihagyva (100%), <br />
+USA_Cornucopia kihagyva (100%), <br />
+USA_StLouisRobin kihagyva (100%), <br />
+USA_FriendshipFliHiBrewery kihagyva (100%), <br />
+USA_SummerTree kihagyva (100%), <br />
+USA_ZeeSpyHat kihagyva (100%), <br />
+USA_WYMM kihagyva (100%), <br />
+USA_FlatObjectAnnex, not updated, 0.0<br />
+USA_StLFlatRob, not updated, 0.0<br />
+USA_StLFlatRobFlats kihagyva (100%), <br />
+USA_CottlevillePost kihagyva (100%), <br />
+USA_DaisyChain kihagyva (100%), <br />
+USA_TowerGrovePark kihagyva (100%), <br />
+USA_PiratesCannon kihagyva (100%), <br />
+USA_MothersDayBasket kihagyva (100%), <br />
+USA_Munzee11 kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+Lithuania_city_Vilnius, <b>updated</b>, <a href="https://www.munzee.com/map/u99zqup56/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_city_Vilnius.json" target="_blank">json</a><br />
+USA_city_AppleValley, <b>updated</b>, <a href="https://www.munzee.com/map/9zvwrj4rs/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_AppleValley.json" target="_blank">json</a><br />
+USA_city_Concord, <b>updated</b>, <a href="https://www.munzee.com/map/9yzep995f/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Concord.json" target="_blank">json</a><br />
+USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
+USA_city_SaintCharles, <b>updated</b>, <a href="https://www.munzee.com/map/9yzssvpyq/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintCharles.json" target="_blank">json</a><br />
+USA_city_SaintLouis, <b>updated</b>, <a href="https://www.munzee.com/map/9yzgd9yne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintLouis.json" target="_blank">json</a><br />
+USA_city_SaintPeters, <b>updated</b>, <a href="https://www.munzee.com/map/9yzsdnv17/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintPeters.json" target="_blank">json</a><br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.02.23 01:58:22<br />
+összesen 2893<br />
