--- a/feladat.html
+++ b/feladat.html
@@ -905,3 +905,4 @@ USA_PiratesCannon kihagyva (100%), <br />
 USA_MothersDayBasket kihagyva (100%), <br />
 USA_Munzee11 kihagyva (100%), <br />
 UnitedKingdom_HeartBeatz, <b>updated</b>, 537, <a href="https://www.munzee.com/map/u122rjm0e/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HeartBeatz.json" target="_blank">json</a> <b>100%</b><br />
+USA_Scooter, <b>updated</b>, 437, <a href="https://www.munzee.com/map/dprwp4pjw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Scooter.json" target="_blank">json</a> <b>100%</b><br />
