--- a/feladat.html
+++ b/feladat.html
@@ -906,3 +906,15 @@ USA_MothersDayBasket kihagyva (100%), <br />
 USA_Munzee11 kihagyva (100%), <br />
 UnitedKingdom_HeartBeatz, <b>updated</b>, 537, <a href="https://www.munzee.com/map/u122rjm0e/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HeartBeatz.json" target="_blank">json</a> <b>100%</b><br />
 USA_Scooter, <b>updated</b>, 437, <a href="https://www.munzee.com/map/dprwp4pjw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Scooter.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+USA_city_Concord, <b>updated</b>, <a href="https://www.munzee.com/map/9yzep995f/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Concord.json" target="_blank">json</a><br />
+USA_city_SaintCharles, <b>updated</b>, <a href="https://www.munzee.com/map/9yzssvpyq/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintCharles.json" target="_blank">json</a><br />
+USA_city_SaintLouis, <b>updated</b>, <a href="https://www.munzee.com/map/9yzgd9yne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintLouis.json" target="_blank">json</a><br />
+USA_city_SaintPeters, <b>updated</b>, <a href="https://www.munzee.com/map/9yzsdnv17/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintPeters.json" target="_blank">json</a><br />
+----felhasználók<br />
+BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
+BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6gcrmm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
+----témák<br />
+<b>stop</b> - 2023.02.23 08:00:53<br />
+összesen 3050<br />
