--- a/feladat.html
+++ b/feladat.html
@@ -872,3 +872,44 @@ USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, not updated, 0.0<br />
 USA_CelticKnot, not updated, 0.8900000000000006<br />
 USA_STLPirateShip, <b>updated</b>, 201, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
+USA_BluesMunzee, not updated, 0.0<br />
+USA_HowellViking, not updated, 0.0<br />
+USA_STLPokeball, not updated, 0.0<br />
+USA_STLTardis, not updated, 0.0<br />
+USA_KirkwoodEvolutions1, not updated, 0.0<br />
+USA_KirkwoodEvolutions2, not updated, 0.0<br />
+USA_KirkwoodEvolutions3, not updated, 0.0<br />
+USA_KirkwoodEvolutions4, not updated, 0.0<br />
+USA_KirkwoodEvolutions5, not updated, 0.0<br />
+USA_KirkwoodEvolutions6 kihagyva (100%), <br />
+USA_KirkwoodEvolutions7, not updated, 0.0<br />
+USA_Woodpecker, not updated, 0.0<br />
+USA_ZBriefcase kihagyva (100%), <br />
+USA_WinterCardinalFeather kihagyva (100%), <br />
+USA_Chickadee kihagyva (100%), <br />
+USA_FlatDogBone kihagyva (100%), <br />
+USA_NyisutterBday kihagyva (100%), <br />
+USA_Cornucopia kihagyva (100%), <br />
+USA_StLouisRobin kihagyva (100%), <br />
+USA_FriendshipFliHiBrewery kihagyva (100%), <br />
+USA_SummerTree kihagyva (100%), <br />
+USA_ZeeSpyHat kihagyva (100%), <br />
+USA_WYMM kihagyva (100%), <br />
+USA_FlatObjectAnnex, not updated, 0.0<br />
+USA_StLFlatRob, not updated, 0.0<br />
+USA_StLFlatRobFlats kihagyva (100%), <br />
+USA_CottlevillePost kihagyva (100%), <br />
+USA_DaisyChain kihagyva (100%), <br />
+USA_TowerGrovePark kihagyva (100%), <br />
+USA_PiratesCannon kihagyva (100%), <br />
+USA_MothersDayBasket kihagyva (100%), <br />
+USA_Munzee11 kihagyva (100%), <br />
+UnitedKingdom_HeartBeatz kihagyva (100%), <br />
+USA_Scooter kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+USA_city_SaintCharles, <b>updated</b>, <a href="https://www.munzee.com/map/9yzssvpyq/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintCharles.json" target="_blank">json</a><br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.02.24 01:49:11<br />
+összesen 2342<br />
