--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.03.01 01:10:13<br />
+<b>start</b> - 2023.03.01 07:41:28<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
@@ -20,7 +20,7 @@ NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, 0.7490636704119851<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.35273368606702604<br />
 UnitedKingdom_LFCBebington, not updated, 0.9667024704618719<br />
-Finland_Nurmijarvi, <b>updated</b>, 232, <a href="https://www.munzee.com/map/ud9xe05ek/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Nurmijarvi.json" target="_blank">json</a><br />
+Finland_Nurmijarvi, not updated, 0.0<br />
 Finland_Hyvinkaa, not updated, 0.0<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
@@ -522,7 +522,7 @@ USA_KauffmanLegacyParkQuilt kihagyva (100%), <br />
 USA_KCEgyptianZodiacExpanded kihagyva (100%), <br />
 USA_Marion kihagyva (100%), <br />
 USA_Dragonfly, not updated, 0.0<br />
-USA_ElectricalEvolution, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
+USA_ElectricalEvolution, not updated, 0.27999999999999403<br />
 USA_CFPumpkin, not updated, 0.0<br />
 USA_Marion4LeafClover kihagyva (100%), <br />
 USA_Popcorn, not updated, 0.0<br />
@@ -692,7 +692,7 @@ Australia_FlatsFlyAKite kihagyva (100%), <br />
 Australia_SouthernCrossKite kihagyva (100%), <br />
 Australia_ToowoombaRose, not updated, 0.0<br />
 Australia_SnowBeeMelting kihagyva (100%), <br />
-USA_CelticSnake, <b>updated</b>, 106, <a href="https://www.munzee.com/map/9vk4uqw9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticSnake.json" target="_blank">json</a><br />
+USA_CelticSnake, not updated, 0.0<br />
 Australia_AE2Submarine kihagyva (100%), <br />
 Australia_AussiePossum kihagyva (100%), <br />
 USA_ArizonaCactus kihagyva (100%), <br />
@@ -857,7 +857,7 @@ Lithuania_SeskinesSkulpturyParkas, not updated, 0.3299999999999983<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
 USA_TaylorSwiftTheEras, not updated, 0.0<br />
 USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees, <b>updated</b>, 321, <a href="https://www.munzee.com/map/cbj8qfh3r/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PotOZees.json" target="_blank">json</a><br />
+USA_PotOZees, not updated, 0.0<br />
 USA_MaineWeatherBalloon, not updated, 0.0<br />
 USA_HappyHoliday20, not updated, 0.0<br />
 USA_HazardSpurCampton, not updated, 0.0<br />
@@ -906,11 +906,4 @@ USA_MothersDayBasket kihagyva (100%), <br />
 USA_Munzee11 kihagyva (100%), <br />
 UnitedKingdom_HeartBeatz kihagyva (100%), <br />
 USA_Scooter kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-BonnieB1_all, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_all.json" target="_blank">json</a><br />
-BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7h6gcrmm/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2023.03.01 01:57:51<br />
-összesen 2857<br />
+USA_YanktonIceCream, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9zdezvx58/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_YanktonIceCream.json" target="_blank">json</a> <b>100%</b><br />
