--- a/feladat.html
+++ b/feladat.html
@@ -907,3 +907,4 @@ USA_Munzee11 kihagyva (100%), <br />
 UnitedKingdom_HeartBeatz kihagyva (100%), <br />
 USA_Scooter kihagyva (100%), <br />
 USA_YanktonIceCream, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9zdezvx58/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_YanktonIceCream.json" target="_blank">json</a> <b>100%</b><br />
+UnitedKingdom_FlatsHideNSeek, <b>updated</b>, 311, <a href="https://www.munzee.com/map/gcn8wmup6/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_FlatsHideNSeek.json" target="_blank">json</a><br />
