--- a/feladat.html
+++ b/feladat.html
@@ -909,3 +909,4 @@ USA_Scooter kihagyva (100%), <br />
 USA_YanktonIceCream, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9zdezvx58/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_YanktonIceCream.json" target="_blank">json</a> <b>100%</b><br />
 UnitedKingdom_FlatsHideNSeek, <b>updated</b>, 311, <a href="https://www.munzee.com/map/gcn8wmup6/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_FlatsHideNSeek.json" target="_blank">json</a><br />
 Australia_BendigoIcyPole, <b>updated</b>, 71, <a href="https://www.munzee.com/map/r1qwfff97/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_BendigoIcyPole.json" target="_blank">json</a> <b>100%</b><br />
+USA_SouthPadreIslandKOA, <b>updated</b>, 63, <a href="https://www.munzee.com/map/9udukgtf8/16.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SouthPadreIslandKOA.json" target="_blank">json</a><br />
