--- a/feladat.html
+++ b/feladat.html
@@ -926,3 +926,4 @@ USA_KirkwoodVsWebsterGrovesFootball, <b>updated</b>, 92, <a href="https://www.mu
 USA_BreadCo, <b>updated</b>, 67, <a href="https://www.munzee.com/map/9yzeqd37q/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BreadCo.json" target="_blank">json</a> <b>100%</b><br />
 USA_Swon, <b>updated</b>, 122, <a href="https://www.munzee.com/map/9yzexbq14/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Swon.json" target="_blank">json</a> <b>100%</b><br />
 USA_ThankYouTruckers, <b>updated</b>, 81, <a href="https://www.munzee.com/map/9yzkxr91v/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ThankYouTruckers.json" target="_blank">json</a> <b>100%</b><br />
+USA_CherryMini, <b>updated</b>, 41, <a href="https://www.munzee.com/map/9yzse56kh/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CherryMini.json" target="_blank">json</a> <b>100%</b><br />
