--- a/feladat.html
+++ b/feladat.html
@@ -928,3 +928,4 @@ USA_Swon, <b>updated</b>, 122, <a href="https://www.munzee.com/map/9yzexbq14/16.
 USA_ThankYouTruckers, <b>updated</b>, 81, <a href="https://www.munzee.com/map/9yzkxr91v/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ThankYouTruckers.json" target="_blank">json</a> <b>100%</b><br />
 USA_CherryMini, <b>updated</b>, 41, <a href="https://www.munzee.com/map/9yzse56kh/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CherryMini.json" target="_blank">json</a> <b>100%</b><br />
 USA_BlossomMini, <b>updated</b>, 14, <a href="https://www.munzee.com/map/9yzsdfxk2/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BlossomMini.json" target="_blank">json</a> <b>100%</b><br />
+USA_MarchMini, <b>updated</b>, 28, <a href="https://www.munzee.com/map/9yzse4fsu/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MarchMini.json" target="_blank">json</a> <b>100%</b><br />
