--- a/feladat.html
+++ b/feladat.html
@@ -931,3 +931,4 @@ USA_BlossomMini, <b>updated</b>, 14, <a href="https://www.munzee.com/map/9yzsdfx
 USA_MarchMini, <b>updated</b>, 28, <a href="https://www.munzee.com/map/9yzse4fsu/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MarchMini.json" target="_blank">json</a> <b>100%</b><br />
 USA_PiDay2022, <b>updated</b>, 140, <a href="https://www.munzee.com/map/9yzerqq4b/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiDay2022.json" target="_blank">json</a> <b>100%</b><br />
 USA_SpringTree, <b>updated</b>, 151, <a href="https://www.munzee.com/map/9yzse4bfp/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpringTree.json" target="_blank">json</a> <b>100%</b><br />
+USA_HeavySmokeBBQ, <b>updated</b>, 96, <a href="https://www.munzee.com/map/9yzsdz07k/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HeavySmokeBBQ.json" target="_blank">json</a> <b>100%</b><br />
