--- a/feladat.html
+++ b/feladat.html
@@ -933,3 +933,4 @@ USA_PiDay2022, <b>updated</b>, 140, <a href="https://www.munzee.com/map/9yzerqq4
 USA_SpringTree, <b>updated</b>, 151, <a href="https://www.munzee.com/map/9yzse4bfp/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpringTree.json" target="_blank">json</a> <b>100%</b><br />
 USA_HeavySmokeBBQ, <b>updated</b>, 96, <a href="https://www.munzee.com/map/9yzsdz07k/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HeavySmokeBBQ.json" target="_blank">json</a> <b>100%</b><br />
 USA_BowleroLaserTag, <b>updated</b>, 127, <a href="https://www.munzee.com/map/9yzs8z8k3/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BowleroLaserTag.json" target="_blank">json</a> <b>100%</b><br />
+USA_BohrerPark, <b>updated</b>, 79, <a href="https://www.munzee.com/map/9yzepurxg/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BohrerPark.json" target="_blank">json</a> <b>100%</b><br />
