--- a/feladat.html
+++ b/feladat.html
@@ -942,3 +942,4 @@ USA_WinterTree, <b>updated</b>, 123, <a href="https://www.munzee.com/map/9yzsdf0
 USA_AutumnTree, <b>updated</b>, 271, <a href="https://www.munzee.com/map/9yzse63z5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AutumnTree.json" target="_blank">json</a> <b>100%</b><br />
 USA_ZeeOps, <b>updated</b>, 77, <a href="https://www.munzee.com/map/9yzs8pe34/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ZeeOps.json" target="_blank">json</a> <b>100%</b><br />
 USA_StPetersChess, <b>updated</b>, 132, <a href="https://www.munzee.com/map/9yzs9p60c/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StPetersChess.json" target="_blank">json</a> <b>100%</b><br />
+USA_PiratesRum, <b>updated</b>, 84, <a href="https://www.munzee.com/map/9yzssr8dc/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiratesRum.json" target="_blank">json</a> <b>100%</b><br />
