--- a/feladat.html
+++ b/feladat.html
@@ -953,3 +953,4 @@ USA_ShamrocksMug, <b>updated</b>, 77, <a href="https://www.munzee.com/map/9yzs9t
 USA_Halloween, <b>updated</b>, 120, <a href="https://www.munzee.com/map/9yzsg8k4g/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Halloween.json" target="_blank">json</a> <b>100%</b><br />
 USA_AutumnMoon, <b>updated</b>, 144, <a href="https://www.munzee.com/map/9yzserg07/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AutumnMoon.json" target="_blank">json</a> <b>100%</b><br />
 USA_Rosesquirrel, <b>updated</b>, 73, <a href="https://www.munzee.com/map/9yzse7m02/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Rosesquirrel.json" target="_blank">json</a> <b>100%</b><br />
+USA_Campfire, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9yzsg564x/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Campfire.json" target="_blank">json</a> <b>100%</b><br />
