--- a/feladat.html
+++ b/feladat.html
@@ -960,3 +960,4 @@ USA_WarriorSpear, <b>updated</b>, 130, <a href="https://www.munzee.com/map/9yzss
 USA_PizzaOnTheHill, <b>updated</b>, 69, <a href="https://www.munzee.com/map/9yzg9wjq0/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PizzaOnTheHill.json" target="_blank">json</a> <b>100%</b><br />
 USA_StLouisFlamingo, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9yzg34cq3/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLouisFlamingo.json" target="_blank">json</a> <b>100%</b><br />
 USA_PirateCrossbow, <b>updated</b>, 94, <a href="https://www.munzee.com/map/9yzsu639f/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PirateCrossbow.json" target="_blank">json</a> <b>100%</b><br />
+USA_Munzee10, <b>updated</b>, 91, <a href="https://www.munzee.com/map/9yzg26h7d/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Munzee10.json" target="_blank">json</a> <b>100%</b><br />
