--- a/feladat.html
+++ b/feladat.html
@@ -963,3 +963,4 @@ USA_PirateCrossbow, <b>updated</b>, 94, <a href="https://www.munzee.com/map/9yzs
 USA_Munzee10, <b>updated</b>, 91, <a href="https://www.munzee.com/map/9yzg26h7d/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Munzee10.json" target="_blank">json</a> <b>100%</b><br />
 USA_SybergsShark, <b>updated</b>, 75, <a href="https://www.munzee.com/map/9yzg3hn9j/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SybergsShark.json" target="_blank">json</a> <b>100%</b><br />
 USA_ChuckECheesePizza, <b>updated</b>, 71, <a href="https://www.munzee.com/map/9yzss5rpx/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ChuckECheesePizza.json" target="_blank">json</a> <b>100%</b><br />
+USA_9Mile, <b>updated</b>, 129, <a href="https://www.munzee.com/map/9yzg2dt8r/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_9Mile.json" target="_blank">json</a> <b>100%</b><br />
