--- a/feladat.html
+++ b/feladat.html
@@ -965,3 +965,4 @@ USA_SybergsShark, <b>updated</b>, 75, <a href="https://www.munzee.com/map/9yzg3h
 USA_ChuckECheesePizza, <b>updated</b>, 71, <a href="https://www.munzee.com/map/9yzss5rpx/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ChuckECheesePizza.json" target="_blank">json</a> <b>100%</b><br />
 USA_9Mile, <b>updated</b>, 129, <a href="https://www.munzee.com/map/9yzg2dt8r/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_9Mile.json" target="_blank">json</a> <b>100%</b><br />
 USA_MothersDayFlowerPot, <b>updated</b>, 74, <a href="https://www.munzee.com/map/9yzsetr9v/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MothersDayFlowerPot.json" target="_blank">json</a> <b>100%</b><br />
+USA_TurtlePark, <b>updated</b>, 65, <a href="https://www.munzee.com/map/9yzgc2dz5/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TurtlePark.json" target="_blank">json</a> <b>100%</b><br />
