--- a/feladat.html
+++ b/feladat.html
@@ -978,3 +978,4 @@ USA_FriscoTrain, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9yzerz8
 USA_StLouisAirplane, <b>updated</b>, 130, <a href="https://www.munzee.com/map/9yzsrkdby/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLouisAirplane.json" target="_blank">json</a> <b>100%</b><br />
 USA_PiDayPie, <b>updated</b>, 70, <a href="https://www.munzee.com/map/9yzssh333/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiDayPie.json" target="_blank">json</a> <b>100%</b><br />
 USA_AfftonHorse, <b>updated</b>, 90, <a href="https://www.munzee.com/map/9yzg21rxs/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AfftonHorse.json" target="_blank">json</a> <b>100%</b><br />
+USA_KirkwoodAnchor, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9yzerj220/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KirkwoodAnchor.json" target="_blank">json</a> <b>100%</b><br />
