--- a/feladat.html
+++ b/feladat.html
@@ -983,3 +983,4 @@ USA_WalpelhorstHorse, <b>updated</b>, 91, <a href="https://www.munzee.com/map/9y
 USA_StCharlesAnchor, <b>updated</b>, 106, <a href="https://www.munzee.com/map/9yzsss1ws/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StCharlesAnchor.json" target="_blank">json</a> <b>100%</b><br />
 USA_Birdhouse, <b>updated</b>, 209, <a href="https://www.munzee.com/map/9yzdzxgvz/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Birdhouse.json" target="_blank">json</a> <b>100%</b><br />
 USA_Cardinals, <b>updated</b>, 85, <a href="https://www.munzee.com/map/9yzgewdcn/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Cardinals.json" target="_blank">json</a> <b>100%</b><br />
+USA_FlatFriends, <b>updated</b>, 139, <a href="https://www.munzee.com/map/9yzse5st1/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatFriends.json" target="_blank">json</a> <b>100%</b><br />
