--- a/feladat.html
+++ b/feladat.html
@@ -985,3 +985,4 @@ USA_Birdhouse, <b>updated</b>, 209, <a href="https://www.munzee.com/map/9yzdzxgv
 USA_Cardinals, <b>updated</b>, 85, <a href="https://www.munzee.com/map/9yzgewdcn/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Cardinals.json" target="_blank">json</a> <b>100%</b><br />
 USA_FlatFriends, <b>updated</b>, 139, <a href="https://www.munzee.com/map/9yzse5st1/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatFriends.json" target="_blank">json</a> <b>100%</b><br />
 USA_FlatLouInStLou, <b>updated</b>, 122, <a href="https://www.munzee.com/map/9yzsk2db8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatLouInStLou.json" target="_blank">json</a> <b>100%</b><br />
+USA_FlatLouInStLouPink, <b>updated</b>, 78, <a href="https://www.munzee.com/map/9yzsk2db8/16.0009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatLouInStLouPink.json" target="_blank">json</a><br />
